--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ allure {
 dependencies {
     testImplementation 'com.codeborne:selenide:5.12.0'
     testImplementation "io.qameta.allure:allure-selenide:${allureVersion}"
+    testImplementation 'ch.qos.logback:logback-classic:1.2.3'
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
